force-app/main/default/objects/AssessmentSheetItem__c/AssessmentSheetItem__c.object-meta.xml
<CustomObject>
    <label>Assessment Sheet Item</label>
    <nameField>
        <displayFormat>SI_{YYYYMMDD}_{000}</displayFormat>
        <label>Assessment Sheet Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>