force-app/main/default/objects/AssessmentSheetItem__c/fields/AssessmentResultSection__c.field-meta.xml
<CustomField>
    <fullName>AssessmentResultSection__c</fullName>
    <label>Assessment Sheet Section</label>
    <referenceTo>AssessmentSheetSection__c</referenceTo>
    <relationshipLabel>Assessment Sheet Item</relationshipLabel>
    <relationshipName>Assessment_Sheet_Item</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>