force-app/main/default/objects/AssessmentSheetItem__c/fields/AssessmentTemplateQuestion__c.field-meta.xml
<CustomField>
    <fullName>AssessmentTemplateQuestion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assessment Template Question</label>
    <referenceTo>AssessmentTemplateQuestion__c</referenceTo>
    <relationshipLabel>Assessment Sheet Item</relationshipLabel>
    <relationshipName>Assessment_Sheet_Item</relationshipName>
    <type>Lookup</type>
</CustomField>