force-app/main/default/objects/AssessmentSheetItem__c/fields/FileId__c.field-meta.xml
<CustomField>
    <fullName>FileId__c</fullName>
    <label>FileId</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>